# torchvision_to_tensorrt

./: README.md
.history/: README_20220214160817.md
openbayes_object2torch/: maskrcnn_demo.py
openbayes_object2torch/cuda_graph/: test.py
openbayes_object2torch/old/: backbone.py  neck.py
openbayes_plugin/include/openbayes_cuda_util/: cuda_util.h  cudnn_util.h
openbayes_plugin/src/openbayes_cuda_util/: tensorMeanVar.cu
openbayes_plugin/src/plugin/: CMakeLists.txt
openbayes_plugin/src/plugin/adaptivePoolPlugin/: adaptivePoolPlugin.h  adaptive_pool.cu  adaptive_pool.h
openbayes_plugin/src/plugin/carafeFeatureReassemblePlugin/: CMakeLists.txt  carafeFeatureReassemblePlugin.cpp  carafeFeatureReassemblePlugin.h
openbayes_torch2trt/: demo.py
openbayes_torch2trt/torch2trt/converters/: Embedding.py  cummax.py  cummin.py  deform_conv2d.py  gather.py  nms.py
openbayes_torch2trt/torch2trt/plugins/: __init__.py  create_adaptivepool_plugin.py
plugin/: conanfile.py
plugin/include/openbayes_cuda_util/: common_util.h
plugin/include/plugin/: openbayesInferPlugin.h
plugin/src/openbayes_cuda_util/: reduceUtils.cuh
torch2trt/torch2trt/: torch2trt.py
torch2trt/torch2trt/converters/: CenteredLayer.py  __init__.py  bmm.py  cast_type.py  cumprod.py  grid_sample.py  roi_align.py  roi_pool.py  unfold.py
torch2trt/torch2trt/plugins/: create_centeredlayer_plugin.py  globals.py
torchvision2trt/: main.py  maskrcnn_demo2.py  util.py
torchvision2trt/cuda_graph/: whole_net_my.py
torchvision2trt/old/: anchor_head.py  rpn_head.py
trt_plugin/src/: CMakeLists.txt
trt_plugin/src/openbayes_cuda_util/: CMakeLists.txt  memcpyPermute.cu  repeatDims.cu
trt_plugin/src/plugin/: InferPlugin.cpp
trt_plugin/src/plugin/CenteredLayerPlugin/: CMakeLists.txt
(+94 files in other folders)
